@@ -6,7 +6,7 @@ QT -= gui
 DEFINES -= KJS_IDENTIFIER_HIDE_GLOBALS 
 INCLUDEPATH += $$PWD/.. $$PWD $$PWD/../bindings $$PWD/../bindings/c $$PWD/../wtf
 qt-port:DEFINES += BUILDING_QT__
-qt-port:LIBS += -L$$OUTPUT_DIR/lib -lQtWebKit
+#qt-port:LIBS += -L$$OUTPUT_DIR/lib -lQtWebKit
 gdk-port {
     QMAKE_CXXFLAGS += $$system(icu-config --cppflags)
     LIBS += $$system(icu-config --ldflags)
@@ -17,3 +17,6 @@ isEmpty(OUTPUT_DIR):OUTPUT_DIR=$$PWD/../..
 include($$OUTPUT_DIR/config.pri)
 
 include($$PWD/../JavaScriptCore.pri)
+
+# Hack!  Fix this.
+SOURCES -= API/JSValueRef.cpp
