@@ -1,3 +1,11 @@
+2007-06-15  George Staikos  <staikos@kde.org>
+
+        Fixing Qt build.
+
+        * ForwardingHeaders/JavaScriptCore/APICast.h: Added.
+        * WebCore.pro:
+        * page/InspectorController.h:
+
 2007-06-20  Adam Roben  <aroben@apple.com>
 
         More speculative Qt/Gdk build fixes.
