@@ -1,3 +1,9 @@
+2007-06-15  George Staikos  <staikos@kde.org>
+
+        Fixing Qt build.
+
+        * JavaScriptCore.pri:
+
 2007-06-20  Mark Rowe  <mrowe@apple.com>
 
         Reviewed by Mitz.
